// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@graphql-box/debug-manager >> CacheManager >> CACHE_ENTRY_ADDED >> correct data emitted 1`] = `
[
  {
    "data": {
      "cacheHeaders": {
        "cacheControl": "public, max-age=5",
      },
      "cacheType": "queryResponses",
      "environment": "client",
      "logGroup": 4,
      "logOrder": 10,
      "loggerName": "CLIENT",
      "operation": "query",
      "operationName": "",
      "originalRequestHash": "",
      "queryFiltered": false,
      "requestComplexity": undefined,
      "requestDepth": undefined,
      "requestID": "123456789",
    },
    "error": undefined,
    "message": "cache_entry_added",
    "stats": {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
  },
  {
    "data": {
      "cacheHeaders": {
        "cacheControl": "public, max-age=5",
      },
      "cacheType": "requestFieldPaths",
      "decryptedCacheKey": "organization({"login":"facebook"})",
      "environment": "client",
      "logGroup": 4,
      "logOrder": 10,
      "loggerName": "CLIENT",
      "operation": "query",
      "operationName": "",
      "originalRequestHash": "",
      "queryFiltered": false,
      "requestComplexity": undefined,
      "requestDepth": undefined,
      "requestID": "123456789",
    },
    "error": undefined,
    "message": "cache_entry_added",
    "stats": {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
  },
  {
    "data": {
      "cacheHeaders": {
        "cacheControl": "public, max-age=5",
      },
      "cacheType": "dataEntities",
      "environment": "client",
      "logGroup": 4,
      "logOrder": 10,
      "loggerName": "CLIENT",
      "operation": "query",
      "operationName": "",
      "originalRequestHash": "",
      "queryFiltered": false,
      "requestComplexity": undefined,
      "requestDepth": undefined,
      "requestID": "123456789",
    },
    "error": undefined,
    "message": "cache_entry_added",
    "stats": {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
  },
]
`;

exports[`@graphql-box/debug-manager >> CacheManager >> CACHE_ENTRY_QUERIED >> correct data emitted 1`] = `
[
  {
    "data": {
      "cacheType": "requestFieldPaths",
      "decryptedCacheKey": "organization({"login":"facebook"})",
      "environment": "client",
      "logGroup": 2,
      "logOrder": 4,
      "loggerName": "CLIENT",
      "operation": "query",
      "operationName": "",
      "originalRequestHash": "",
      "queryFiltered": false,
      "requestComplexity": undefined,
      "requestDepth": undefined,
      "requestID": "123456789",
    },
    "error": undefined,
    "message": "cache_entry_queried",
    "stats": {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
  },
  {
    "data": {
      "cacheType": "dataEntities",
      "environment": "client",
      "logGroup": 2,
      "logOrder": 4,
      "loggerName": "CLIENT",
      "operation": "query",
      "operationName": "",
      "originalRequestHash": "",
      "queryFiltered": false,
      "requestComplexity": undefined,
      "requestDepth": undefined,
      "requestID": "123456789",
    },
    "error": undefined,
    "message": "cache_entry_queried",
    "stats": {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
  },
]
`;
